selfhost/test/typechecker/if/error_unfilled_holes_bindingdecl.4.out
Error at %FILE_NAME%:1:9
Could not determine type for assignment
  |  val a = if true { [] } else None
             ^
Type '<unknown>[]?' has unfilled holes. Please use an explicit type annotation to denote the type
